fixed spacing issue on presplash

--- a/packages/app/src/pages/PreSplash.css
+++ b/packages/app/src/pages/PreSplash.css
@@ -1,7 +1,5 @@
 #start-page {
   background-image: url("/assets/img/shapes_background.png");
-  height: 100%;
-  width: 100%;
 }
 
 #inner-start-page {
